# device_driver_cpp

./: CMakeLists.txt  README.md
driver/: CMakeLists.txt  devA.cpp  devB.cpp
include/driver/: deviceA.h
lib/: CMakeLists.txt  sys_init.cpp
lib/inc/: device_base.h  sys_init.h
src/: CMakeLists.txt  main.cpp
